--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #103282; }
+  background: #4882b3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #54b78c; }
+  background: #f7ead2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e136bb; }
+  background: #c93683; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #103334; }
+  background: #0f952b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #108b22; }
+  background: #f8ce82; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c43869; }
+  background: #e24857; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6bc823; }
+  background: #86174f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #31a25e; }
+  background: #46943f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #72b457; }
+  background: #e45023; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1af783; }
+  background: #7c08ac; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a5f72c; }
+  background: #24438f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f4adf3; }
+  background: #2797e9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ffc38a; }
+  background: #aee6c4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #550ac5; }
+  background: #10d23d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #182839; }
+  background: #086d80; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e05e4d; }
+  background: #565e46; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8a187a; }
+  background: #0b1f18; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #956b76; }
+  background: #d397da; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #869d3c; }
+  background: #e56781; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f5e04e; }
+  background: #9dfd4d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9cbdd3; }
+  background: #bed1cd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b74510; }
+  background: #3a9c54; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #221856; }
+  background: #7226e0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #689331; }
+  background: #6ed9c8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f05ed9; }
+  background: #fa1cf9; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9a0f73; }
+  background: #de33eb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8ce3a1; }
+  background: #53da38; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1ca0b9; }
+  background: #3f96cc; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #a9ebe4; }
+  background: #ab40d7; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #aa020a; }
+  background: #1a8a8f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b3c705; }
+  background: #bcea78; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #50ca17; }
+  background: #9affe0; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #db6a91; }
+  background: #601ebd; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #957ebe; }
+  background: #16dab0; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9046bb; }
+  background: #ea51e4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #493d5e; }
+  background: #ec0212; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8d06c5; }
+  background: #1f6d2f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0fa389; }
+  background: #cdc26b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9b3e8c; }
+  background: #7a0ee1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c43d3f; }
+  background: #ed88aa; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0f8525; }
+  background: #f697dd; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #36cba2; }
+  background: #731889; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8e68e1; }
+  background: #d9af20; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #54d56b; }
+  background: #3f83e4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a65737; }
+  background: #ef0ce2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5cec34; }
+  background: #275e69; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7c5d3d; }
+  background: #ee4b4c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e80eb7; }
+  background: #1126ba; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #af99e2; }
+  background: #032f9d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5fe0b6; }
+  background: #ad31c2; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #969c5c; }
+  background: #34d6f0; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5ece1c; }
+  background: #4c8a3c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #20424e; }
+  background: #2ed398; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #1cd7e5; }
+  background: #cc5015; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a6d618; }
+  background: #5caf01; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #451585; }
+  background: #73d688; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #09d4af; }
+  background: #064b93; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #96bf05; }
+  background: #e8ac43; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7da412; }
+  background: #47d162; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f251ce; }
+  background: #560b59; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a0b2fe; }
+  background: #fc2065; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #5ec275; }
+  background: #d1b71e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #392465; }
+  background: #47ebe2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #183a39; }
+  background: #e2da47; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #62018b; }
+  background: #c6d519; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #8eba5e; }
+  background: #cb0731; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #694c51; }
+  background: #a37aaf; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #13ab62; }
+  background: #2c9c8a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #15a788; }
+  background: #ecad74; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #59aadc; }
+  background: #85284d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #e70dd9; }
+  background: #a2190d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0ee204; }
+  background: #7bab06; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #24522c; }
+  background: #e76f1b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #528b77; }
+  background: #5ed187; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ad69a4; }
+  background: #6ec9a5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7f1fc7; }
+  background: #a5c1e2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #cfb8bb; }
+  background: #bbe5b7; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #39bd55; }
+  background: #7f9899; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d119ac; }
+  background: #b90fe1; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #896732; }
+  background: #998956; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e66e53; }
+  background: #0be26e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #70ec59; }
+  background: #01d9db; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e96b1c; }
+  background: #7842ca; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #33d661; }
+  background: #44b967; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #05bfc4; }
+  background: #6ea280; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #820f69; }
+  background: #f972e2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2a3abd; }
+  background: #2ee6aa; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #2d48d3; }
+  background: #d6f1ff; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b92f93; }
+  background: #e862df; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b5f354; }
+  background: #ec6b88; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #a236d4; }
+  background: #45d5f6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f6fa59; }
+  background: #5e908a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #efd9bb; }
+  background: #c9f214; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #cfe325; }
+  background: #d5a73c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #7e8d1d; }
+  background: #831da3; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #da9d18; }
+  background: #c6a47c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #9ce26d; }
+  background: #ef519e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d96dda; }
+  background: #454dff; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #bcbe19; }
+  background: #819e9c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c06870; }
+  background: #cea80f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10596,7 +10596,7 @@ table .bold-heading {
 .widget-slider .carousel-inner {
   height: calc(100vh - 120px) !important;
   overflow-y: auto !important;
-  padding-bottom: 25px; }
+  margin-bottom: 25px; }
 
 .dropdown-select-native select {
   color: #6c757d;
