--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3887,7 +3887,7 @@ line-height: 145.5px;
  .carousel-inner {
   height: calc(100vh - 120px) !important ;
   overflow-y: auto !important;
-  padding-bottom: 25px;
+  margin-bottom: 25px;
  }
 }
 
