--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #4882b3; }
+  background: #d13446; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f7ead2; }
+  background: #4cd117; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c93683; }
+  background: #af13da; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0f952b; }
+  background: #4242da; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f8ce82; }
+  background: #314970; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e24857; }
+  background: #8a3fe9; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #86174f; }
+  background: #1a20e9; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #46943f; }
+  background: #385614; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e45023; }
+  background: #b90873; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7c08ac; }
+  background: #2c36a3; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #24438f; }
+  background: #b06010; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2797e9; }
+  background: #044254; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #aee6c4; }
+  background: #fcc9af; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #10d23d; }
+  background: #31ccf2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #086d80; }
+  background: #2f3204; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #565e46; }
+  background: #2d3cb0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0b1f18; }
+  background: #359439; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d397da; }
+  background: #c0b32c; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e56781; }
+  background: #2adbf9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9dfd4d; }
+  background: #1837a8; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #bed1cd; }
+  background: #f3d3ea; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3a9c54; }
+  background: #6c9a15; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7226e0; }
+  background: #c0b160; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6ed9c8; }
+  background: #2852d8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #fa1cf9; }
+  background: #03b2eb; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #de33eb; }
+  background: #280ae3; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #53da38; }
+  background: #515956; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3f96cc; }
+  background: #e92028; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ab40d7; }
+  background: #c69d8c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1a8a8f; }
+  background: #f01c58; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #bcea78; }
+  background: #077e0a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9affe0; }
+  background: #3d7b81; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #601ebd; }
+  background: #3e6d1b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #16dab0; }
+  background: #37c5fb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ea51e4; }
+  background: #d6c931; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ec0212; }
+  background: #1137b0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #1f6d2f; }
+  background: #743604; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #cdc26b; }
+  background: #da447e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7a0ee1; }
+  background: #fbef2f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ed88aa; }
+  background: #0b8cb4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f697dd; }
+  background: #889bcb; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #731889; }
+  background: #adf631; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d9af20; }
+  background: #956333; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3f83e4; }
+  background: #18c1ae; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ef0ce2; }
+  background: #3d2cb8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #275e69; }
+  background: #e88403; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ee4b4c; }
+  background: #411156; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1126ba; }
+  background: #8a1647; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #032f9d; }
+  background: #798bb2; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ad31c2; }
+  background: #194761; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #34d6f0; }
+  background: #62e124; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4c8a3c; }
+  background: #f8529e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2ed398; }
+  background: #9e3c88; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #cc5015; }
+  background: #351705; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5caf01; }
+  background: #841391; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #73d688; }
+  background: #a4c9fd; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #064b93; }
+  background: #2dcc8f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e8ac43; }
+  background: #fac611; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #47d162; }
+  background: #74f67c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #560b59; }
+  background: #75c05b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #fc2065; }
+  background: #ea1e8b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d1b71e; }
+  background: #10e15f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #47ebe2; }
+  background: #60da70; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e2da47; }
+  background: #3101e8; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c6d519; }
+  background: #2a4ca6; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #cb0731; }
+  background: #ba4ce7; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a37aaf; }
+  background: #b8d7c2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2c9c8a; }
+  background: #6db598; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ecad74; }
+  background: #ec2c18; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #85284d; }
+  background: #a663f5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a2190d; }
+  background: #177cf3; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7bab06; }
+  background: #451016; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e76f1b; }
+  background: #978640; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #5ed187; }
+  background: #8149d1; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6ec9a5; }
+  background: #3fe37a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a5c1e2; }
+  background: #3a1b90; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #bbe5b7; }
+  background: #9e4a24; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7f9899; }
+  background: #c2a31f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b90fe1; }
+  background: #674f16; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #998956; }
+  background: #db230d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0be26e; }
+  background: #121979; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #01d9db; }
+  background: #55304f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7842ca; }
+  background: #688237; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #44b967; }
+  background: #95ca18; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6ea280; }
+  background: #d8f098; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f972e2; }
+  background: #82fa25; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2ee6aa; }
+  background: #bd450f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d6f1ff; }
+  background: #fc5eb4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e862df; }
+  background: #3825a2; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ec6b88; }
+  background: #501e08; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #45d5f6; }
+  background: #496a1c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #5e908a; }
+  background: #0aa63d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c9f214; }
+  background: #5392d1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d5a73c; }
+  background: #4f7ab5; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #831da3; }
+  background: #1458a3; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c6a47c; }
+  background: #466b55; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ef519e; }
+  background: #1c95f1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #454dff; }
+  background: #1c9cab; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #819e9c; }
+  background: #33ffad; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cea80f; }
+  background: #695992; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10596,7 +10596,7 @@ table .bold-heading {
 .widget-slider .carousel-inner {
   height: calc(100vh - 120px) !important;
   overflow-y: auto !important;
-  margin-bottom: 25px; }
+  margin-bottom: 30px; }
 
 .dropdown-select-native select {
   color: #6c757d;
