--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d13446; }
+  background: #4ee4aa; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4cd117; }
+  background: #cd83aa; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #af13da; }
+  background: #3d1af9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #4242da; }
+  background: #58ab47; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #314970; }
+  background: #24ef66; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #8a3fe9; }
+  background: #852e7b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1a20e9; }
+  background: #45b108; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #385614; }
+  background: #1ff95d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b90873; }
+  background: #f8af56; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #2c36a3; }
+  background: #6a545d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b06010; }
+  background: #4ff891; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #044254; }
+  background: #7c59be; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #fcc9af; }
+  background: #f75325; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #31ccf2; }
+  background: #236b23; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2f3204; }
+  background: #dfafbb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #2d3cb0; }
+  background: #237e3d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #359439; }
+  background: #517427; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c0b32c; }
+  background: #7fa3cb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #2adbf9; }
+  background: #785109; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1837a8; }
+  background: #3f1117; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f3d3ea; }
+  background: #f3e23d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6c9a15; }
+  background: #43f81e; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c0b160; }
+  background: #a2a7b0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2852d8; }
+  background: #ece1ab; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #03b2eb; }
+  background: #e43c44; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #280ae3; }
+  background: #7643ba; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #515956; }
+  background: #26349f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e92028; }
+  background: #1497e3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c69d8c; }
+  background: #bc0884; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f01c58; }
+  background: #704d99; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #077e0a; }
+  background: #ea374a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #3d7b81; }
+  background: #85d63e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3e6d1b; }
+  background: #cac4f9; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #37c5fb; }
+  background: #5d58ac; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d6c931; }
+  background: #1bb3bb; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #1137b0; }
+  background: #ba18fd; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #743604; }
+  background: #16f157; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #da447e; }
+  background: #636bc8; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #fbef2f; }
+  background: #4ab30c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #0b8cb4; }
+  background: #b9b936; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #889bcb; }
+  background: #b84e46; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #adf631; }
+  background: #f27c21; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #956333; }
+  background: #db14e2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #18c1ae; }
+  background: #bbe177; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3d2cb8; }
+  background: #b9632d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e88403; }
+  background: #e94efc; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #411156; }
+  background: #ac424c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8a1647; }
+  background: #3fce3b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #798bb2; }
+  background: #3bde95; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #194761; }
+  background: #0f3b70; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #62e124; }
+  background: #ba61b4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f8529e; }
+  background: #51ba5d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9e3c88; }
+  background: #3a0820; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #351705; }
+  background: #70d5ce; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #841391; }
+  background: #e71e35; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a4c9fd; }
+  background: #5bd40d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2dcc8f; }
+  background: #0f8352; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #fac611; }
+  background: #2aea10; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #74f67c; }
+  background: #d340dd; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #75c05b; }
+  background: #496107; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ea1e8b; }
+  background: #bcef68; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #10e15f; }
+  background: #f882df; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #60da70; }
+  background: #d149d4; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3101e8; }
+  background: #aa82e5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2a4ca6; }
+  background: #923bfc; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ba4ce7; }
+  background: #ceec66; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b8d7c2; }
+  background: #d27768; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #6db598; }
+  background: #9b7575; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ec2c18; }
+  background: #0ad922; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a663f5; }
+  background: #54d0c3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #177cf3; }
+  background: #329a7e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #451016; }
+  background: #60f593; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #978640; }
+  background: #8af729; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8149d1; }
+  background: #f92a7f; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3fe37a; }
+  background: #d2dfdd; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #3a1b90; }
+  background: #7068a3; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9e4a24; }
+  background: #48c449; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c2a31f; }
+  background: #1e6cd2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #674f16; }
+  background: #019d21; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #db230d; }
+  background: #f8396f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #121979; }
+  background: #4c4d58; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #55304f; }
+  background: #06f159; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #688237; }
+  background: #f1e307; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #95ca18; }
+  background: #9971d8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d8f098; }
+  background: #e130c7; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #82fa25; }
+  background: #db95cc; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #bd450f; }
+  background: #84d84f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #fc5eb4; }
+  background: #45c59d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3825a2; }
+  background: #3860dd; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #501e08; }
+  background: #f29814; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #496a1c; }
+  background: #818ff6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0aa63d; }
+  background: #ca4b63; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #5392d1; }
+  background: #ac7e39; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4f7ab5; }
+  background: #f26bfa; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1458a3; }
+  background: #e64820; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #466b55; }
+  background: #fb0422; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #1c95f1; }
+  background: #910d35; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1c9cab; }
+  background: #7cb77a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #33ffad; }
+  background: #505de3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #695992; }
+  background: #48d635; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10597,6 +10597,11 @@ table .bold-heading {
   height: calc(100vh - 120px) !important;
   overflow-y: auto !important;
   margin-bottom: 30px; }
+  .widget-slider .carousel-inner .mCSB_scrollTools {
+    right: -14px !important; }
+
+.mCustomScrollBox {
+  padding-bottom: 30px !important; }
 
 .dropdown-select-native select {
   color: #6c757d;
