--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #4ee4aa; }
+  background: #e1808a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #cd83aa; }
+  background: #d97212; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3d1af9; }
+  background: #1b92c5; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #58ab47; }
+  background: #ee3358; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #24ef66; }
+  background: #8cfd79; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #852e7b; }
+  background: #584dc9; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #45b108; }
+  background: #11364f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1ff95d; }
+  background: #f15dd0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f8af56; }
+  background: #e58a33; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #6a545d; }
+  background: #4751d4; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #4ff891; }
+  background: #c95f8f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7c59be; }
+  background: #c7edcc; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f75325; }
+  background: #168d6f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #236b23; }
+  background: #0db596; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #dfafbb; }
+  background: #bc8397; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #237e3d; }
+  background: #897d97; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #517427; }
+  background: #aff648; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7fa3cb; }
+  background: #521382; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #785109; }
+  background: #bb4f03; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3f1117; }
+  background: #989bdc; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f3e23d; }
+  background: #71d60a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #43f81e; }
+  background: #62330a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a2a7b0; }
+  background: #c2372f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ece1ab; }
+  background: #1ba266; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e43c44; }
+  background: #d7a8df; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7643ba; }
+  background: #7dd21a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #26349f; }
+  background: #3d35ca; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1497e3; }
+  background: #145940; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #bc0884; }
+  background: #cce741; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #704d99; }
+  background: #692694; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ea374a; }
+  background: #a2290a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #85d63e; }
+  background: #6f86b8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #cac4f9; }
+  background: #269b2e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5d58ac; }
+  background: #d47ae5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1bb3bb; }
+  background: #8554da; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ba18fd; }
+  background: #37336a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #16f157; }
+  background: #8e8be2; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #636bc8; }
+  background: #ac302a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4ab30c; }
+  background: #058419; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b9b936; }
+  background: #76c48a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b84e46; }
+  background: #770733; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f27c21; }
+  background: #d9f04f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #db14e2; }
+  background: #6afc6e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #bbe177; }
+  background: #b33463; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b9632d; }
+  background: #1c7811; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e94efc; }
+  background: #3baf0f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ac424c; }
+  background: #52157f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3fce3b; }
+  background: #700c88; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #3bde95; }
+  background: #34377d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0f3b70; }
+  background: #a7615b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ba61b4; }
+  background: #a611f2; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #51ba5d; }
+  background: #aaf709; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #3a0820; }
+  background: #833bec; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #70d5ce; }
+  background: #9679dd; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e71e35; }
+  background: #95e528; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5bd40d; }
+  background: #963a4b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #0f8352; }
+  background: #16194f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #2aea10; }
+  background: #5328ca; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d340dd; }
+  background: #1ecb8d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #496107; }
+  background: #abbceb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #bcef68; }
+  background: #796f1b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f882df; }
+  background: #8f92bb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d149d4; }
+  background: #891b33; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #aa82e5; }
+  background: #71657e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #923bfc; }
+  background: #baeee2; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ceec66; }
+  background: #fcfe94; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d27768; }
+  background: #02e557; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9b7575; }
+  background: #2fdc82; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0ad922; }
+  background: #239dd4; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #54d0c3; }
+  background: #14ba03; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #329a7e; }
+  background: #a09eb9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #60f593; }
+  background: #6fb1e2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #8af729; }
+  background: #46e12a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f92a7f; }
+  background: #b6e250; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d2dfdd; }
+  background: #5ee7f4; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7068a3; }
+  background: #7670b4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #48c449; }
+  background: #dd19ab; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1e6cd2; }
+  background: #8e1291; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #019d21; }
+  background: #7ebaa7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f8396f; }
+  background: #9f6507; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4c4d58; }
+  background: #8f68f3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #06f159; }
+  background: #4fe572; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f1e307; }
+  background: #309821; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9971d8; }
+  background: #c2affa; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e130c7; }
+  background: #fb505d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #db95cc; }
+  background: #8a4ecb; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #84d84f; }
+  background: #b08b2d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #45c59d; }
+  background: #cdb07d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3860dd; }
+  background: #35c3e9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f29814; }
+  background: #c04135; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #818ff6; }
+  background: #1c110a; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ca4b63; }
+  background: #031118; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ac7e39; }
+  background: #94fcef; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f26bfa; }
+  background: #1915f0; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e64820; }
+  background: #7874e0; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #fb0422; }
+  background: #69682e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #910d35; }
+  background: #dde731; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #7cb77a; }
+  background: #4d8817; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #505de3; }
+  background: #e58bdc; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #48d635; }
+  background: #c35011; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15882,6 +15882,11 @@ option {
 .slid-screen-wrapper .tabs-sidemenu-accord-container .table-submenu-list {
   transition: all 800ms;
   opacity: 1; }
+
+.devices-list-slider-section-wrapper .sliding-right-section {
+  background: transparent !important; }
+  .devices-list-slider-section-wrapper .sliding-right-section .device-table-main td {
+    padding-left: 8px !important; }
 
 .time-sync-div {
   display: grid;
